--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Passionate Devloper and Digital Marketer with 1 years of experience ,helping your Business Grow and increasing revenue. Currently employed as a Web Developer, Digital Marketing Specialist at Vedaxo Tech Solutions.</p>
+          <p>An experienced Developer and Digital Marketer who is passionate about helping businesses grow and increase revenue. Currently pursuing Masters in Computer Science From Shards University.</p>
         </div>
 
         <div class="row">
@@ -98,8 +98,7 @@
               </div>
             </div>
             <p>
-              I am passionate about my work. Because I love what I do, I have a steady source of motivation that drives me to do my best. In my last Internsip, this passion led me to challenge myself daily and learn new skills that helped me to do
-              better work. For example, I taught myself how to use Photoshop to improve the quality of our photos and graphics. I soon became the go-to person for any design needs.
+              It is my passion for my work that drives me to do my best. During my last internship, this passion motivated me to challenge myself daily and learn new skills that helped me perform better.I also taught myself Photoshop so that I could improve the quality of our photos and graphics aos that i can go to for any design.
             </p>
           </div>
         </div>
