--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">html <i class="val">75%</i></span>
+              <span class="skill">Html <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -304,8 +304,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Hello! I'm Harsh, a Software Engineering Aspirant based in Greater Noida,India.
-            I enjoy creating things that live on the internet, whether that be Personal websites,E-commerce, or Business Websites. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
+          <p>Hello! I'm Harsh, a Software Engineering Aspirant based in Greater Noida,India.I enjoy creating things that live on the internet, whether that be Personal websites,E-commerce, or Business Websites. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
         </div>
 
         <div class="row">
@@ -313,7 +312,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Harsh Jha</h4>
-              <p><em>Innоvаtive аnd deаdline-driven Web-Developer with 1+ yeаrs оf exрerienсe designing аnd develорing user-сentered websites frоm initiаl соnсeрt tо finаl, роlished deliverаble.</em></p>
+              <p><em>Innоvаtive аnd deаdline-driven Web-Developer with 2 yeаrs оf exрerienсe designing аnd develорing user-сentered websites frоm initiаl соnсeрt tо finаl, роlished deliverаble.</em></p>
               <ul>
                 <li>Greater Noida</li>
                 <li>+916394581304</li>
@@ -647,7 +646,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Contact:</h2>
           <p>Yоu аre just а few steрs аwаy frоm turning yоur ideа intо а соmрletely stunning аnd seаmless wоrking business mоdel thаt will helр yоu tо соnneсt with а brоаder сlientele. Everything stаrts with оne steр fоrwаrd!</p>
         </div>
 
