--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>An experienced Developer and Digital Marketer who is passionate about helping businesses grow and increase revenue. Currently pursuing Masters in Computer Science From Shards University.</p>
+          <p>An experienced Developer and Digital Marketer who is passionate about helping businesses grow and increase revenue. Currently pursuing Masters in Software Engineering From Sharda University.</p>
         </div>
 
         <div class="row">
