hacodersh to harsh

--- a/GALLERY.html
+++ b/GALLERY.html
@@ -121,10 +121,10 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Hacodersh</span></strong>
+        &copy; Copyright <strong><span>Harsh</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://www.hacodersh.com/">HarshJha</a>
+        Designed by <a href="https://www.Harsh.com/">HarshJha</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
