--- a/bmw.html
+++ b/bmw.html
@@ -120,7 +120,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright">Harsh
         &copy; Copyright <strong><span>Hacodersh</span></strong>
       </div>
       <div class="credits">
