--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 19 Oct 1999</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.Hacodersh.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.Harsh.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +6394581304</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Greater Noida, India</li>
                 </ul>
@@ -691,7 +691,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Hacodersh</span></strong>
+        &copy; Copyright <strong><span>Harsh</span></strong>
       </div>
       <div class="credits">
         Designed by <a target="_blank" href="https://www.linkedin.com/in/harshjhasd/">HarshJha</a>
