--- a/keeper.html
+++ b/keeper.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Harsh<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -120,7 +120,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Hacodersh</span></strong>
+        &copy; Copyright <strong><span>Harsh</span></strong>
       </div>
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/harshjhasd/">HarshJha</a>
