--- a/personal.html
+++ b/personal.html
@@ -121,7 +121,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Hacodersh</span></strong>
+        &copy; Copyright <strong><span>Harsh</span></strong>
       </div>
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/harshjhasd/">HarshJha</a>
