online app added

--- a/index.html
+++ b/index.html
@@ -557,6 +557,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets\img\portfolio\onlinenotes.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="#" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="onlinenotes.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
 
 
         </div>
