online app added

--- a/onlinenotes.html
+++ b/onlinenotes.html
@@ -89,7 +89,7 @@
 
         <div class="portfolio-details-container">
 
-          <div class="owl-carousel portfolio-details-carousel">            
+          <div class="owl-carousel portfolio-details-carousel">
             <img src="assets\img\portfolio\onlinenotes2.PNG" class="img-fluid" alt="">
             <img src="assets\img\portfolio\onlinenotes3.PNG" class="img-fluid" alt="">
           </div>
@@ -100,7 +100,7 @@
               <li><strong>Category</strong>: Web App</li>
               <li><strong>Client</strong>: Online Notes App</li>
               <li><strong>Project date</strong>: 01 February, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://warm-taiga-99254.herokuapp.com/">www.Online-Notes.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://warm-taiga-99254.herokuapp.com/" target="_blank">www.Online-Notes.com</a></li>
             </ul>
           </div>
 
