target blank added

--- a/digit.html
+++ b/digit.html
@@ -101,7 +101,7 @@
               <li><strong>Category</strong>: Project Frontend</li>
               <li><strong>Client</strong>:Disha Khubani</li>
               <li><strong>Project date</strong>: 20 Sept, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/disha/">www.harshjha.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/disha/" target="_blank">www.harshjha.com</a></li>
             </ul>
           </div>
 
