--- a/drum.html
+++ b/drum.html
@@ -99,7 +99,7 @@
               <li><strong>Category</strong>: Web App</li>
               <li><strong>Client</strong>: Bajatey Raho</li>
               <li><strong>Project date</strong>: 01 February, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/Drumkit-Javascript/">www.bajateyraho.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/Drumkit-Javascript/" target="_blank">www.bajateyraho.com</a></li>
             </ul>
           </div>
 
