--- a/keeper.html
+++ b/keeper.html
@@ -100,7 +100,7 @@ Harsh<!DOCTYPE html>
               <li><strong>Category</strong>: React App</li>
               <li><strong>Client</strong>: React Keeper App</li>
               <li><strong>Project date</strong>: 05 May, 2021</li>
-              <li><strong>Project URL</strong>: <a href="https://1jb26.csb.app/">www.React-keeper.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://1jb26.csb.app/" target="_blank">www.React-keeper.com</a></li>
             </ul>
           </div>
 
