--- a/personal.html
+++ b/personal.html
@@ -101,7 +101,7 @@
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>:Self</li>
               <li><strong>Project date</strong>: 10 June, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/MyPersonalPage-HTML-Css/">www.harshjha.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/MyPersonalPage-HTML-Css/" target="_blank">www.harshjha.com</a></li>
             </ul>
           </div>
 
