--- a/solar1.html
+++ b/solar1.html
@@ -101,7 +101,7 @@
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>: Solar Panel Company</li>
               <li><strong>Project date</strong>: 05 May, 2021</li>
-              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/solar-panel-/index.html">www.solarpanel.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/solar-panel-/index.html" target="_blank">www.solarpanel.com</a></li>
             </ul>
           </div>
 
