--- a/staminagym.html
+++ b/staminagym.html
@@ -101,7 +101,7 @@
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>: Stamina Gym</li>
               <li><strong>Project date</strong>: 01 October, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/stamina-chatbot-localhost-map/index.html">www.stamina.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://harshjhasd.github.io/stamina-chatbot-localhost-map/index.html" target="_blank">www.stamina.com</a></li>
             </ul>
           </div>
 
