--- a/vedaxo.html
+++ b/vedaxo.html
@@ -101,7 +101,7 @@
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>: Vedaxo Tech Solutions</li>
               <li><strong>Project date</strong>: 01 February, 2021</li>
-              <li><strong>Project URL</strong>: <a href="http://www.vedaxo.com/">www.vedaxo.com</a></li>
+              <li><strong>Project URL</strong>: <a href="http://www.vedaxo.com/" target="_blank">www.vedaxo.com</a></li>
             </ul>
           </div>
 
