--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
           <div style="height: 450px;overflow: hidden;" class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img style="height: 443px;overflow: hidden;" src="assets\img\portfolio\personal.jpg" class="img-fluid" alt="">
+              <img style="height: 443px;overflow: hidden;" src="assets\img\portfolio\personal1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="#" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
                 <a target="_blank" href="personal.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
