--- a/keeper.html
+++ b/keeper.html
@@ -90,8 +90,8 @@ Harsh<!DOCTYPE html>
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets\img\portfolio\keeper1.PNG" class="img-fluid" alt="">
-            <img src="assets\img\portfolio\keeper2.PNG" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\keeper1.png" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\keeper2.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
