--- a/bmw.html
+++ b/bmw.html
@@ -91,8 +91,9 @@
 
           <div class="owl-carousel portfolio-details-carousel">
             <img src="assets\img\portfolio\bmwportfolio.jpg" class="img-fluid" alt="">
-            <img src="" class="img-fluid" alt="">
-            <img src="assets\img\gymwebsiteporto.jpg" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\bmwportfolio.jpg" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\bmwportfolio.jpg" class="img-fluid" alt="">
+
           </div>
 
           <div class="portfolio-info">
