--- a/companyfront.html
+++ b/companyfront.html
@@ -90,9 +90,9 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets\img\portfolio\companyfront1.PNG" class="img-fluid" alt="">
-            <img src="assets\img\portfolio\companyfront1.PNG" class="img-fluid" alt="">
-            <img src="assets\img\portfolio\companyfront1.PNG" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\companyfront1.jpg" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\companyfront1.jpg" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\companyfront1.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
