--- a/dailyjournal.html
+++ b/dailyjournal.html
@@ -89,7 +89,7 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets\img\portfolio\dailyjournal1.PNG" class="img-fluid" alt="">          
+            <img src="assets\img\portfolio\dailyjournal1.png" class="img-fluid" alt="">          
           </div>
 
           <div class="portfolio-info">
