--- a/drum.html
+++ b/drum.html
@@ -90,7 +90,7 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets\img\portfolio\drum1.PNG" class="img-fluid" alt="">
+            <img src="assets\img\portfolio\drum1.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
