--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
               <img style="height: 443px;overflow: hidden;" src="assets\img\portfolio\GALLERY.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="gallery.html" target="_blank" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+                <a href="GALLERY.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -497,7 +497,7 @@
               <img style="height: 443px;overflow: hidden;" src="assets\img\portfolio\personal.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="#" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a target="_blank" href="personal.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+                <a href="personal.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
