--- a/GALLERY.html
+++ b/GALLERY.html
@@ -90,9 +90,8 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets\img\portfolio\Gallery.jpg" class="img-fluid" alt="">
-            <!-- <img src="#" class="img-fluid" alt="">
-            <img src="#" class="img-fluid" alt=""> -->
+            <img src="assets\img\portfolio\gallery1.jpg" class="img-fluid" alt="">
+
           </div>
 
           <div class="portfolio-info">
